--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@ sonar.organization=
 sonar.projectKey=SQ2023TEST_2210616
 sonar.host.url=https://sonar.creis.pt
 sonar.sources=.
+sonar.login=filipefernandes221061645055
+sonar.password=Neovo227088
